--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Морозова Софья Дмитриевна - Лабораторная работа №9</h1>
-    <script src="main.js"></script>
+    <h1>Морозова Софья Дмитриевна - Лабораторная работа №2</h1>
+    <button onclick="convertSpeed(25, 'toM/S')">Первая задача</button>
+    <button onclick="absValue(-4535)">Вторая задача</button>
+    <button onclick="JSObject()">Третья задача</button>
+    <button onclick="randomNumber(0, 25)">Четвёртая задача</button>
+    <button onclick="SampleArray()">Пятая задача</button>
+    <script src="2lab.js"></script>
 </body>
 </html>
 
