--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button onclick="absValue(-4535)">Вторая задача</button>
     <button onclick="JSObject()">Третья задача</button>
     <button onclick="randomNumber(0, 25)">Четвёртая задача</button>
-    <button onclick="SampleArray()">Пятая задача</button>
+    <button onclick="sampleArray(arr,3)">Пятая задача</button>
     <script src="2lab.js"></script>
 </body>
 </html>
